Added ICEAMST and ICITSC survey papers

--- a/docs/survey_paper/icitsc/survey_paper.tex
+++ b/docs/survey_paper/icitsc/survey_paper.tex
@@ -72,7 +72,7 @@ At the ISA and microarchitecture level, minimal hardware changes can introduce s
 
 \begin{figure*}[h]
         \centering
-        \includegraphics[width=1\textwidth]{pipeline_design.png}
+        \includegraphics[width=1\textwidth]{../../pipeline_design.png}
         \caption{Simplified APU Pipeline Design}
         \label{fig.example}
 \end{figure*}
