Update ICITSC folder

--- a/docs/survey_paper/icitsc/survey_paper.tex
+++ b/docs/survey_paper/icitsc/survey_paper.tex
@@ -134,9 +134,7 @@ The combined body of work emphasizes the importance of modularity, configurabili
 
 \section*{\uppercase{Acknowledgements}}
 
-If any, should be placed before the references section
-without numbering. To do so please use the following command:
-\textit{$\backslash$section*\{ACKNOWLEDGEMENTS\}}
+The authors acknowledge the use of AI-based tools, including Perplexity AI and Gemini, for assistance in generating some portions of the text. 
 
 \begin{thebibliography}{99}
 
